Fix case studies grid layout on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1502,6 +1502,10 @@ ul {
 
 .case{
     width: 100%;
+    height: 100%;
+    display: block;
+    aspect-ratio: 16 / 9;
+    object-fit: cover;
     align-items: center;
     position: relative;
     cursor: pointer;
@@ -2228,6 +2232,10 @@ ul {
     }
 
     .work-grid {
+        grid-template-columns: 1fr;
+    }
+
+    .case-grid {
         grid-template-columns: 1fr;
     }
 
